--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       </ul>
     </nav>
   </div>
-  <img src="image1.jpeg" width="1270px" height="410px" alt="">
+  <!-- <img src="image1.jpeg" width="1270px" height="410px" alt=""> -->
 
   <h1>ABOUT ME</h1> <br>
   <h3>
