--- a/about.html
+++ b/about.html
@@ -36,7 +36,7 @@
     𝒹💙𝓁🏵𝓇𝑒𝓈 𝓂🍩𝓁𝑒𝓈𝓉𝒾𝒶𝑒, 𝓇𝑒𝓅𝓇𝑒𝒽𝑒𝓃𝒹𝑒𝓇𝒾𝓉 𝓋𝑒𝓁𝒾𝓉 𝓁𝒶𝒷❀𝓇𝒾💞𝓈𝒶𝓂 𝒻𝓊𝑔𝒾𝓉
     𝒶𝓁𝒾𝒶𝓈 𝓁𝒶𝓊𝒹𝒶𝓃𝓉𝒾𝓊𝓂. 𝑅𝑒𝓇𝓊𝓂 ☯𝒹𝒾𝓉, 𝓋🍑𝓁𝓊𝓅𝓉𝒶𝓉𝒾𝒷𝓊𝓈 𝒹🍪𝓁💞𝓇𝓊𝓂 𝓁𝒶𝒷💙𝓇𝒾💙𝓈𝒶𝓂
     🍑𝒹𝒾🍪 𝒶 𝓇𝑒𝓅𝑒𝓁𝓁𝒶𝓉 𝒶𝓊𝓉 𝑒𝒾𝓊𝓈 𝓅𝑒𝓇𝓈𝓅𝒾𝒸𝒾𝒶𝓉𝒾𝓈 𝒾𝓂𝓅𝑒𝒹𝒾𝓉. 𝒩🍩𝒷𝒾𝓈
-    𝓅𝓁𝒶𝒸𝑒𝒶𝓉 𝒹𝑒𝓁𝑒𝒸𝓉𝓊𝓈 𝓃😍𝓈𝓉𝓇𝓊𝓂 𝒻𝓊𝑔𝒾𝓉 🎀 🐑 ⋆ 🐭
+    𝓅𝓁𝒶𝒸𝑒𝒶𝓉 𝒹𝑒𝓁𝑒𝒸𝓉𝓊𝓈 𝓃😍𝓈𝓉𝓇𝓊𝓂 𝒻𝓊𝑔𝒾𝓉
   </p>
   <h3 class="tt">ASHU CHAHAL</h3>
   <img src="image2.jpeg" class="image2" width="380px" height="280px" alt="">
